# lithic-editor

./: .gitignore  LICENSE  MANIFEST.in  README.md  arrow_annotations.py  arrow_integration.py  lithic_GUI.py  mkdocs.yml  pyproject.toml  requirements.txt  ripple_remover.py  setup.py  sitemap.xml  test_600dpi_neural.py  test_75dpi_neural_retain.py  test_cortex_fix.py  test_neural_cleaning.py  test_simplified_ytip.py  test_unified_300dpi.py
.github/workflows/: docs.yml  tests.yml
docs/: about.md  features.md  index.md  requirements.txt  screenshots.md
docs/api-reference/: cli-reference.md  introduction.md  overview.md  python-api.md
docs/developer/: contributing.md  testing.md
docs/getting-started/: installation.md  quickstart.md  requirements.md
docs/stylesheets/: extra.css
docs/user-guide/: CLI.md  images.md  interface.md  output.md  overview.md  processing.md  troubleshooting.md
example_images/: lithic_blade_LICENSE.txt
getting-started/installation/: index.html
getting-started/quickstart/: index.html
getting-started/requirements/: index.html
lithic_editor/: __init__.py  __main__.py
lithic_editor/annotations/: __init__.py  arrows.py  integration.py
lithic_editor/cli/: __init__.py  docs_server.py  help.py  main.py
lithic_editor/gui/: __init__.py  main_window.py
lithic_editor/models/: FSRCNN_x2.pb  FSRCNN_x3.pb  FSRCNN_x4.pb
lithic_editor/processing/: __init__.py  ripple_removal.py  upscaling.py
paper/: JOSS_REQUIREMENTS_CHECKLIST.md  paper.bib  paper.md
scopes/: CLAUDE.md  PythonPackaging.md
site/: 404.html  index.html  requirements.txt  sitemap.xml
site/features/: index.html
site/getting-started/installation/: index.html
site/getting-started/quickstart/: index.html
site/getting-started/requirements/: index.html
site/screenshots/: index.html
site/search/: search_index.json
site/stylesheets/: extra.css
site/user-guide/overview/: index.html
site/user-guide/processing/: index.html
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_annotations.py  test_cli.py  test_docs_server.py  test_gui.py  test_integration.py  test_processing.py  test_upscaling.py
user-guide/overview/: index.html
